tests/fail/fail_sail_not_working.kl
fn inisiu() {
    sai(1);
}